# dryads

./: .gitignore  CHANGELOG.md  README.md  dryadsfile  pyproject.toml  setup.py
.github/workflows/: publish.yaml
dryad/: __init__.py  common.py  container.py  core.py  execute.py  utils.py
dryads/: __init__.py  checker.py  common.py  container.py  core.py  dryads.py  exec.py  execute.py  helper.py  shell.py  utils.py
examples/: accept_arg_func.py  empty_internal_node.py  flag_anchring.py  flag_ignore_err.py  flag_invisiable.py  flag_prefix_cmd.py  funcs.py  multi_line_cmd.py  typical.py
test/: conflict_flag_prefix_cmd_and_anchring.py  example.py  example_classic.py  example_funcs.py  example_multi_line_cmd.py  flag_accept_arg_invalid1.py  flag_accept_arg_invalid2.py  flag_accept_arg_invalid_cmd.py  flag_accept_arg_invalid_func.py  flag_accept_arg_valid.py  flag_anchring.py  flag_ignore_err.py  flag_invisiable.py  flag_prefix_cmd.py  multi_func.py  single_and_multi_command.py  test_exception.py  test_help.py
tests/: test_checker.py  test_dryads.py  test_helper.py
