[tool.poetry]
name = "dryads"
version = "1.3.1"
description = "Simple CLI building tool and script management tool."
authors = ["zweix123 <1979803044@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.scripts]
ds = "dryads.exc:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
