[tool.poetry]
name = "dryads"
version = "2.0.0"
description = "Simple CLI building tool and script management tool."
authors = ["zweix123 <1979803044@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
ds = "dryads.exec:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
